--- a/index.html
+++ b/index.html
@@ -14,8 +14,31 @@
     table { width: 100%; border-collapse: collapse; margin-top: 0.5rem; margin-bottom: 1.5rem; }
     th, td { padding: 0.5rem; border: 1px solid #ccc; text-align: center; }
     th { background-color: #f0f0f0; }
-    #pjm-controls { margin-top: 1rem; }
-    #zone-filter { width: 100%; max-width: 300px; height: auto; }
+
+    /* controls panel */
+    #data-controls {
+      position: fixed;
+      top: 1rem;
+      right: 1rem;
+      background: #fff;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      padding: 1rem;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      z-index: 1000;
+    }
+    #data-controls h4 {
+      margin: 0 0 0.5rem;
+      font-size: 1rem;
+    }
+    #data-controls label {
+      display: block;
+      margin-bottom: 0.25rem;
+      cursor: pointer;
+    }
+    #data-controls input {
+      margin-right: 0.5rem;
+    }
   </style>
 </head>
 <body>
@@ -24,23 +47,23 @@
     Open Amp CP Alerts
   </button>
 
+  <!-- controls -->
+  <div id="data-controls" style="display:none;">
+    <h4>Select Data</h4>
+    <!-- checkboxes will be inserted here -->
+  </div>
+
   <!-- PJM Section -->
   <section>
     <h1>PJM Demand Top 5 Daily Peaks by Zone (ET)</h1>
     <div id="loading-pjm">Loading PJM data…</div>
     <div id="error-pjm" class="error" style="display:none;"></div>
-
-    <div id="pjm-controls" style="display:none;">
-      <label for="zone-filter">Select Zones:</label><br/>
-      <select id="zone-filter" multiple size="9"></select>
-    </div>
-
     <div id="output-pjm" style="display:none;">
       <div id="tables-pjm"></div>
     </div>
   </section>
 
-  <!-- ERCOT Section (unchanged) -->
+  <!-- ERCOT Section -->
   <section>
     <h1>ERCOT Demand Top 5 Intervals per Month (CT)</h1>
     <h2>Top 5 15‑minute intervals each month</h2>
@@ -52,27 +75,33 @@
   </section>
 
   <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const API_KEY = 'bda3a30f30804e22a62e4637700bab54';
+  document.addEventListener('DOMContentLoaded', () => {
+    const API_KEY = 'bda3a30f30804e22a62e4637700bab54';
 
-      const zones = [
-        { key: 'load.pjm_rto', label: 'PJM RTO' },
-        { key: 'load.comed',   label: 'COMED'   },
-        { key: 'load.ae',      label: 'AECO'    },
-        { key: 'load.aep',     label: 'AEP'     },
-        { key: 'load.dpl',     label: 'DPL'     },
-        { key: 'load.ps',      label: 'PSEG'    },
-        { key: 'load.pe',      label: 'PECO'    },
-        { key: 'load.bc',      label: 'BGE'     },
-        { key: 'load.pl',      label: 'PPL'     },
-      ];
-      const zoneTopData = {};
+    // define your PJM zones and ERCOT as a filter option
+    const filters = [
+      { key: 'load.pjm_rto', label: 'PJM RTO',   type: 'pjm' },
+      { key: 'load.comed',   label: 'COMED',     type: 'pjm' },
+      { key: 'load.ae',      label: 'AECO',      type: 'pjm' },
+      { key: 'load.aep',     label: 'AEP',       type: 'pjm' },
+      { key: 'load.dpl',     label: 'DPL',       type: 'pjm' },
+      { key: 'load.ps',      label: 'PSEG',      type: 'pjm' },
+      { key: 'load.pe',      label: 'PECO',      type: 'pjm' },
+      { key: 'load.bc',      label: 'BGE',       type: 'pjm' },
+      { key: 'load.pl',      label: 'PPL',       type: 'pjm' },
+      { key: 'ercot',        label: 'ERCOT',     type: 'ercot' },
+    ];
 
-      function renderTables(selectedKeys) {
-        const container = document.getElementById('tables-pjm');
-        container.innerHTML = '';
-        selectedKeys.forEach(key => {
-          const zone = zones.find(z => z.key === key);
+    // store precomputed top‐5 for PJM zones
+    const zoneTopData = {};
+
+    function renderPJM(selectedZoneKeys) {
+      const container = document.getElementById('tables-pjm');
+      container.innerHTML = '';
+      selectedZoneKeys
+        .filter(k => k !== 'ercot')
+        .forEach(key => {
+          const zone = filters.find(f => f.key === key);
           const top = zoneTopData[key] || [];
           if (!zone || !top.length) return;
 
@@ -80,17 +109,16 @@
           h3.innerText = zone.label;
           container.appendChild(h3);
 
-          const tbl = document.createElement('table');
+          const table = document.createElement('table');
           const thead = document.createElement('thead');
           const headerRow = document.createElement('tr');
-          ['Date (ET)', 'Day', 'End Time (ET)', 'Load (MW)']
-            .forEach(txt => {
-              const th = document.createElement('th');
-              th.innerText = txt;
-              headerRow.appendChild(th);
-            });
+          ['Date (ET)', 'Day', 'End Time (ET)', 'Load (MW)'].forEach(text => {
+            const th = document.createElement('th');
+            th.innerText = text;
+            headerRow.appendChild(th);
+          });
           thead.appendChild(headerRow);
-          tbl.appendChild(thead);
+          table.appendChild(thead);
 
           const tbody = document.createElement('tbody');
           top.forEach(r => {
@@ -105,177 +133,181 @@
             });
             tbody.appendChild(tr);
           });
-          tbl.appendChild(tbody);
-          container.appendChild(tbl);
+          table.appendChild(tbody);
+          container.appendChild(table);
         });
-      }
+    }
 
-      // PJM fetch + prepare data
-      (function fetchPJM() {
-        const url =
-          'https://api.gridstatus.io/v1/datasets/pjm_standardized_hourly/query'
-          + '?start_time=2025-06-01T01%3A00%3A00'
-          + '&end_time=2025-10-01'
-          + '&timezone=market';
+    function toggleERCOT(show) {
+      document.getElementById('loading-ercot').style.display = show ? '' : 'none';
+      document.getElementById('error-ercot').style.display = 'none';
+      document.getElementById('output-ercot').style.display = show ? '' : 'none';
+    }
 
-        fetch(url, { headers: { 'x-api-key': API_KEY } })
-          .then(r => { if (!r.ok) throw new Error(r.statusText); return r.json(); })
-          .then(resp => {
-            const arr = resp.data || [];
+    function onFilterChange() {
+      const checked = Array.from(
+        document.querySelectorAll('#data-controls input[type=checkbox]:checked')
+      ).map(cb => cb.value);
+      renderPJM(checked);
+      toggleERCOT(checked.includes('ercot'));
+    }
 
-            zones.forEach(zone => {
-              const copy = arr.map(e => ({
-                interval_end_local: e.interval_end_local,
-                value: e[zone.key]
-              }));
-              copy.sort((a,b) => (b.value||0) - (a.value||0));
-
-              const seen = new Set(), top = [];
-              for (const e of copy) {
-                if (top.length >= 5) break;
-                const dt = new Date(e.interval_end_local);
-                const date = dt.toLocaleDateString('en-US', {
-                  timeZone: 'America/New_York',
-                  year: 'numeric', month: '2-digit', day: '2-digit'
-                });
-                if (!seen.has(date)) {
-                  seen.add(date);
-                  top.push({
-                    date,
-                    day: dt.toLocaleDateString('en-US', { weekday:'short', timeZone:'America/New_York' }),
-                    endTime: dt.toLocaleTimeString('en-US', {
-                      timeZone: 'America/New_York',
-                      hour12: true, hour:'2-digit', minute:'2-digit', second:'2-digit'
-                    }),
-                    value: e.value
-                  });
-                }
-              }
-              zoneTopData[zone.key] = top;
-            });
-
-            document.getElementById('loading-pjm').style.display = 'none';
-            document.getElementById('pjm-controls').style.display = 'block';
-            document.getElementById('output-pjm').style.display = 'block';
-
-            // populate multiselect
-            const select = document.getElementById('zone-filter');
-            zones.forEach(z => {
-              const opt = document.createElement('option');
-              opt.value = z.key;
-              opt.text = z.label;
-              opt.selected = true;
-              select.appendChild(opt);
-            });
-            select.addEventListener('change', () => {
-              const selected = Array.from(select.selectedOptions).map(o => o.value);
-              renderTables(selected);
-            });
-
-            // initial render with all zones
-            renderTables(zones.map(z => z.key));
-          })
-          .catch(e => {
-            document.getElementById('loading-pjm').style.display = 'none';
-            const err = document.getElementById('error-pjm');
-            err.innerText = 'Error: ' + e.message;
-            err.style.display = 'block';
-          });
-      })();
-
-      // ERCOT Fetch (unchanged, delayed for rate limit)
-      setTimeout(() => {
-        (function fetchERCOT() {
-          const url =
-            'https://api.gridstatus.io/v1/datasets/ercot_estimated_coincident_peak_load/query'
-            + '?start_time=2025-06-01T01%3A00%3A00'
-            + '&end_time=2025-10-01'
-            + '&timezone=market';
-
-          fetch(url, { headers: { 'x-api-key': API_KEY } })
-            .then(r => { if (!r.ok) throw new Error(r.statusText); return r.json(); })
-            .then(resp => {
-              const arr = resp.data || [];
-              arr.forEach(d => {
-                d.cp = d.internal_generation
-                     + d.dc_tie_imports
-                     - d.dc_tie_exports
-                     - d.wholesale_storage_load;
-              });
-              arr.sort((a,b) => b.cp - a.cp);
-
-              const months = ['June 2025','July 2025','August 2025','September 2025'];
-              const cont = document.getElementById('tables-ercot');
-              cont.innerHTML = '';
-
-              months.forEach(m => {
-                const slice = arr.filter(d => {
-                  const dt = new Date(d.interval_end_local);
-                  return dt.toLocaleString('en-US', {
-                    timeZone: 'America/New_York',
-                    year: 'numeric', month: 'long'
-                  }) === m;
-                }).slice(0,5);
-
-                if (!slice.length) return;
-
-                const h3 = document.createElement('h3');
-                h3.innerText = m;
-                cont.appendChild(h3);
-
-                const tbl = document.createElement('table'),
-                      thd = document.createElement('thead'),
-                      hdr = document.createElement('tr');
-
-                ['End Time (CT)','CP Load (MW)','Int. Gen (MW)','DC In (MW)','DC Out (MW)','WSL (MW)']
-                  .forEach(t => {
-                    const th = document.createElement('th');
-                    th.innerText = t;
-                    hdr.appendChild(th);
-                  });
-
-                thd.appendChild(hdr);
-                tbl.appendChild(thd);
-
-                const tbd = document.createElement('tbody');
-                slice.forEach((d,i) => {
-                  const tr = document.createElement('tr'),
-                        bold = i === 0;
-                  [
-                    d.interval_end_local.replace('T',' ').slice(0,19),
-                    d.cp, d.internal_generation,
-                    d.dc_tie_imports, d.dc_tie_exports,
-                    d.wholesale_storage_load
-                  ].forEach(val => {
-                    const td = document.createElement('td');
-                    td.innerText = (typeof val === 'number')
-                      ? val.toLocaleString(undefined, {
-                          minimumFractionDigits: 3,
-                          maximumFractionDigits: 3
-                        })
-                      : val;
-                    if (bold) td.style.fontWeight = 'bold';
-                    tr.appendChild(td);
-                  });
-                  tbd.appendChild(tr);
-                });
-
-                tbl.appendChild(tbd);
-                cont.appendChild(tbl);
-              });
-
-              document.getElementById('loading-ercot').style.display = 'none';
-              document.getElementById('output-ercot').style.display = 'block';
-            })
-            .catch(e => {
-              document.getElementById('loading-ercot').style.display = 'none';
-              const err = document.getElementById('error-ercot');
-              err.innerText = 'Error: ' + e.message;
-              err.style.display = 'block';
-            });
-        })();
-      }, 1100);
+    // build the checkbox panel
+    const ctrl = document.getElementById('data-controls');
+    filters.forEach(f => {
+      const lbl = document.createElement('label');
+      const cb = document.createElement('input');
+      cb.type = 'checkbox';
+      cb.value = f.key;
+      cb.checked = true;
+      cb.addEventListener('change', onFilterChange);
+      lbl.appendChild(cb);
+      lbl.appendChild(document.createTextNode(f.label));
+      ctrl.appendChild(lbl);
     });
+
+    // PJM fetch & precompute
+    (function fetchPJM() {
+      fetch(
+        'https://api.gridstatus.io/v1/datasets/pjm_standardized_hourly/query'
+        + '?start_time=2025-06-01T01%3A00%3A00'
+        + '&end_time=2025-10-01'
+        + '&timezone=market',
+        { headers: { 'x-api-key': API_KEY } }
+      )
+      .then(r => { if (!r.ok) throw new Error(r.statusText); return r.json(); })
+      .then(resp => {
+        const arr = resp.data || [];
+        filters.filter(f => f.type === 'pjm').forEach(zone => {
+          const copy = arr.map(e => ({
+            interval_end_local: e.interval_end_local,
+            value: e[zone.key]
+          }));
+          copy.sort((a,b) => (b.value||0) - (a.value||0));
+          const seen = new Set(), top = [];
+          for (const e of copy) {
+            if (top.length >= 5) break;
+            const dt = new Date(e.interval_end_local);
+            const date = dt.toLocaleDateString('en-US', {
+              timeZone: 'America/New_York',
+              year: 'numeric', month: '2-digit', day: '2-digit'
+            });
+            if (!seen.has(date)) {
+              seen.add(date);
+              top.push({
+                date,
+                day: dt.toLocaleDateString('en-US',{weekday:'short',timeZone:'America/New_York'}),
+                endTime: dt.toLocaleTimeString('en-US', {
+                  timeZone: 'America/New_York',
+                  hour12: true, hour:'2-digit', minute:'2-digit', second:'2-digit'
+                }),
+                value: e.value
+              });
+            }
+          }
+          zoneTopData[zone.key] = top;
+        });
+
+        document.getElementById('loading-pjm').style.display = 'none';
+        ctrl.style.display = 'block';
+        document.getElementById('output-pjm').style.display = '';
+        onFilterChange();  // initial render
+      })
+      .catch(e => {
+        document.getElementById('loading-pjm').style.display = 'none';
+        const err = document.getElementById('error-pjm');
+        err.innerText = 'Error: ' + e.message;
+        err.style.display = 'block';
+      });
+    })();
+
+    // ERCOT fetch (delayed to respect rate limit)
+    setTimeout(() => {
+      fetch(
+        'https://api.gridstatus.io/v1/datasets/ercot_estimated_coincident_peak_load/query'
+        + '?start_time=2025-06-01T01%3A00%3A00'
+        + '&end_time=2025-10-01'
+        + '&timezone=market',
+        { headers: { 'x-api-key': API_KEY } }
+      )
+      .then(r => { if (!r.ok) throw new Error(r.statusText); return r.json(); })
+      .then(resp => {
+        const arr = resp.data || [];
+        arr.forEach(d => {
+          d.cp = d.internal_generation
+               + d.dc_tie_imports
+               - d.dc_tie_exports
+               - d.wholesale_storage_load;
+        });
+        arr.sort((a,b) => b.cp - a.cp);
+        const months = ['June 2025','July 2025','August 2025','September 2025'];
+        const cont = document.getElementById('tables-ercot');
+        cont.innerHTML = '';
+
+        months.forEach(m => {
+          const slice = arr.filter(d => {
+            const dt = new Date(d.interval_end_local);
+            return dt.toLocaleString('en-US', {
+              timeZone: 'America/New_York',
+              year: 'numeric', month: 'long'
+            }) === m;
+          }).slice(0,5);
+          if (!slice.length) return;
+
+          const h3 = document.createElement('h3');
+          h3.innerText = m;
+          cont.appendChild(h3);
+
+          const tbl = document.createElement('table'),
+                thd = document.createElement('thead'),
+                hdr = document.createElement('tr');
+          ['End Time (CT)','CP Load (MW)','Int. Gen (MW)','DC In (MW)','DC Out (MW)','WSL (MW)']
+            .forEach(t => {
+              const th = document.createElement('th');
+              th.innerText = t;
+              hdr.appendChild(th);
+            });
+          thd.appendChild(hdr);
+          tbl.appendChild(thd);
+
+          const tbd = document.createElement('tbody');
+          slice.forEach((d,i) => {
+            const tr = document.createElement('tr'),
+                  bold = i === 0;
+            [
+              d.interval_end_local.replace('T',' ').slice(0,19),
+              d.cp, d.internal_generation,
+              d.dc_tie_imports, d.dc_tie_exports,
+              d.wholesale_storage_load
+            ].forEach(val => {
+              const td = document.createElement('td');
+              td.innerText = (typeof val === 'number')
+                ? val.toLocaleString(undefined, {
+                    minimumFractionDigits: 3,
+                    maximumFractionDigits: 3
+                  })
+                : val;
+              if (bold) td.style.fontWeight = 'bold';
+              tr.appendChild(td);
+            });
+            tbd.appendChild(tr);
+          });
+          tbl.appendChild(tbd);
+          cont.appendChild(tbl);
+        });
+
+        document.getElementById('loading-ercot').style.display = 'none';
+        document.getElementById('output-ercot').style.display = '';
+      })
+      .catch(e => {
+        document.getElementById('loading-ercot').style.display = 'none';
+        const err = document.getElementById('error-ercot');
+        err.innerText = 'Error: ' + e.message;
+        err.style.display = 'block';
+      });
+    }, 1100);
+
+  });
   </script>
 </body>
 </html>
